@@ -1,6 +1,6 @@
 # This file contains a collection of tests for generic/tclMain.c.
 #
-# RCS: @(#) $Id: main.test,v 1.13.4.8 2007/09/07 03:15:21 dgp Exp $
+# RCS: @(#) $Id: main.test,v 1.13.4.9 2010/11/19 15:36:54 dgp Exp $
 
 if {[catch {package require tcltest 2.0.2}]} {
     puts stderr "Skipping tests in [info script]. tcltest 2.0.2 required."
@@ -68,8 +68,6 @@ namespace eval ::tcl::test::main {
     } -result [list [interpreter] -script 0]\n
 
     test Tcl_Main-1.3 {
-	Tcl_Main: encoding of arguments: done by system encoding
-	Note the shortcoming explained in Tcl Feature Request 491789
     } -constraints {
 	stdio
     } -setup {
@@ -84,10 +82,8 @@ namespace eval ::tcl::test::main {
 	[encoding convertto [encoding system] \u00c0]]] 0]\n
 
     test Tcl_Main-1.4 {
-	Tcl_Main: encoding of arguments: done by system encoding
-	Note the shortcoming explained in Tcl Feature Request 491789
     } -constraints {
-	stdio tempNotWin
+	stdio
     } -setup {
 	makeFile {puts [list $argv0 $argv $tcl_interactive]} script
 	catch {set f [open "|[list [interpreter] script \u20ac]" r]}
@@ -100,8 +96,6 @@ namespace eval ::tcl::test::main {
 	[encoding convertto [encoding system] \u20ac]]] 0]\n
 
     test Tcl_Main-1.5 {
-	Tcl_Main: encoding of script name: system encoding loss
-	Note the shortcoming explained in Tcl Feature Request 491789
     } -constraints {
 	stdio
     } -setup {
@@ -116,10 +110,8 @@ namespace eval ::tcl::test::main {
 	[encoding convertto [encoding system] \u00c0]]] {} 0]\n
 
     test Tcl_Main-1.6 {
-	Tcl_Main: encoding of script name: system encoding loss
-	Note the shortcoming explained in Tcl Feature Request 491789
     } -constraints {
-	stdio tempNotWin
+	stdio
     } -setup {
 	makeFile {puts [list $argv0 $argv $tcl_interactive]} \u20ac
 	catch {set f [open "|[list [interpreter] \u20ac]" r]}
